# wxy-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  llm_middleware_service_spec.md  main.py  pyproject.toml  start.sh  test_full_pipeline.py  test_thesis_pipeline.py  test_thesis_toc_fix.py  thesis_generation_spec_v3.md
app/: __init__.py  config.py  main.py
app/api/chat/: __init__.py  callback.py  set_notify.py
app/api/v1/: __init__.py  balance.py  chat.py  extract.py  thesis.py
app/llm/: __init__.py  client.py
app/llm/prompts/: __init__.py  chat_prompt.py  extract_prompt.py  thesis_abstract_prompt.py  thesis_fulltext_prompt.py  thesis_outline_prompt.py  thesis_reference_prompt.py
app/schemas/: balance.py  chat.py  extract.py  thesis.py  wework.py
app/services/: balance_service.py  chat_memory.py  chat_service.py  extract_service.py
app/services/chat/: __init__.py  dispatcher.py  handler_call.py  handler_device.py  handler_login.py  handler_message.py  handler_qrcode.py  wework_api_client.py
app/services/storage/: java_callback.py  qiniu_uploader.py
app/services/thesis/: __init__.py  abstract_service.py  crossref_client.py  docx_builder.py  fulltext_service.py  image_renderer.py  outline_service.py  placeholder.py  reference_service.py
tests/thesis/: test_abstract_parsing.py  test_cover_layout.py  test_crossref_client.py  test_placeholder_image.py  test_reference_formatting.py  test_reference_injection.py  test_school_format_compliance.py  test_thesis_api.py  test_thesis_image_renderer.py  test_thesis_schemas.py  test_toc_structure.py
