[project]
name = "wxy-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langchain>=1.2.12",
    "langchain-openai>=1.0.3",
    "pydantic>=2.0",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "uvicorn>=0.38.0",
]
