[project]
name = "wxy-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=1.0.3",
    "matplotlib>=3.10.8",
    "pillow>=11.0.0",
    "pydantic>=2.0",
    "qiniu>=7.14.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
